refactor: change mark-up for better positioning

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">git
+	<meta charset="UTF-8">
 	<title>Singolo</title>
 </head>
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<a href="#" class="logo"><span class="logo_text">Singolo</span><span class="logo_star">*</span></a>
+			<a href="#" class="logo"><span class="logo__text">Singolo</span><span class="logo__star">*</span></a>
 			<nav class="header__navigation">
 				<ul class="navigation">
 					<li class="navigation__item navigation__item_current"><a href="#">Home</a></li>
@@ -24,41 +24,53 @@
 				<button class="slider__button"></button>
 				<div class="slider__item"></div>
 				<div class="slider__item slider__item_turned"></div>
-				<button class="slider__button slider__button-next"></button>
+				<button class="slider__button slider__button_next"></button>
 			</div>
 			<section class="services">
-				<h2>Our Services</h2>
-				<p class="services__description">Fusee dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusee dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+				<h2 class="services__headline">Our Services</h2>
+				<p class="services__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				<ul class="layout-3-col">
 					<li class="services__item">
 						<div class="icon icon_big"></div>
-						<h4>Custom Design</h4>
-						<p class="services__service-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, uItrices velit.</p>
+						<div class="description">
+							<h4 class="description__header">Custom Design</h4>
+							<p class="description__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, uItrices velit.</p>
+						</div>
 					</li>
 					<li class="services__item">
 						<div class="icon icon_big"></div>
-						<h4>Innovative Ideas</h4>
-						<p class="services__service-description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+						<div class="description">
+							<h4 class="description__header">Innovative Ideas</h4>
+							<p class="description__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+						</div>
 					</li>
 					<li class="services__item">
 						<div class="icon icon_big"></div>
-						<h4>Love Is The Answer</h4>
-						<p class="services__service-description">Nulla sed nunc et tortor luctus fauabus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+						<div class="description">
+							<h4 class="description__header">Love Is The Answer</h4>
+							<p class="description__text">Nulla sed nunc et tortor luctus fauabus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+						</div>
 					</li>
 					<li class="services__item">
 						<div class="icon icon_big"></div>
-						<h4>Responsive Layout</h4>
-						<p class="services__service-description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae-sent elit leo.</p>
+						<div class="description">
+							<h4 class="description__header">Responsive Layout</h4>
+							<p class="description__text">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae-sent elit leo.</p>
+						</div>
 					</li>
 					<li class="services__item">
 						<div class="icon icon_big"></div>
-						<h4>24/7 Support</h4>
-						<p class="services__service-description">Vivamus vel quam lacinia, tincidunt dui non vehicula nisi. Nulla a sem erat. Pellen-tesque egestas venenatis lorem.</p>
+						<div class="description">
+							<h4 class="description__header">24/7 Support</h4>
+							<p class="description__text">Vivamus vel quam lacinia, tincidunt dui non vehicula nisi. Nulla a sem erat. Pellen-tesque egestas venenatis lorem.</p>
+						</div>
 					</li>
 					<li class="services__item">
 						<div class="icon icon_big"></div>
-						<h4>Feel Like A Star</h4>
-						<p class="services__service-description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusee vitae aliquam tellus.</p>
+						<div class="description">
+							<h4 class="description__header">Feel Like A Star</h4>
+							<p class="description__text">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusee vitae aliquam tellus.</p>
+						</div>
 					</li>
 				</ul>
 			</section>
