feat: add images to the project and mark-up

--- a/singolo1.html
+++ b/singolo1.html
@@ -22,8 +22,8 @@
 			<h1 class="hidden-h1">Singolo</h1>
 			<div class="slider">
 				<button class="slider__button"></button>
-				<div class="slider__item"></div>
-				<div class="slider__item slider__item_turned"></div>
+				<div class="slider__item"><img src="asserts/img/base.png" width="215" height="458" alt="mobile phone"></div>
+				<div class="slider__item slider__item_turned"><img src="asserts/img/base.png" width="215" height="458" alt="mobile phone"></div>
 				<button class="slider__button slider__button_next"></button>
 			</div>
 			<section class="services">
@@ -40,7 +40,7 @@
 					<li class="services__item">
 						<div class="icon icon_big"></div>
 						<div class="description">
-							<h4 class="description__header">Innovative Ideas</h4>
+							<h4 class="description__header">Inovative Ideas</h4>
 							<p class="description__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
 						</div>
 					</li>
@@ -61,7 +61,7 @@
 					<li class="services__item">
 						<div class="icon icon_big"></div>
 						<div class="description">
-							<h4 class="description__header">24/7 Support</h4>
+							<h4 class="description__header">24 / 7 Support</h4>
 							<p class="description__text">Vivamus vel quam lacinia, tincidunt dui non vehicula nisi. Nulla a sem erat. Pellen-tesque egestas venenatis lorem.</p>
 						</div>
 					</li>
