--- a/singolo1.html
+++ b/singolo1.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Singolo</title>
+	<link rel="stylesheet" href="singolo1.css">
 </head>
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<a href="#" class="logo"><span class="logo__text">Singolo</span><span class="logo__star">*</span></a>
+			<a class="logo" href="#"><span class="logo__text">Singolo</span><span class="logo__star">*</span></a>
 			<nav class="header__navigation">
 				<ul class="navigation">
 					<li class="navigation__item navigation__item_current"><a href="#">Home</a></li>
@@ -20,12 +22,12 @@
 		</header>
 		<main>
 			<h1 class="hidden-h1">Singolo</h1>
-			<div class="slider">
+			<section class="slider">
 				<button class="slider__button"></button>
 				<div class="slider__item"><img src="asserts/img/base.png" width="215" height="458" alt="mobile phone"></div>
 				<div class="slider__item slider__item_turned"><img src="asserts/img/base.png" width="215" height="458" alt="mobile phone"></div>
 				<button class="slider__button slider__button_next"></button>
-			</div>
+			</section>
 			<section class="services">
 				<h2 class="services__headline">Our Services</h2>
 				<p class="services__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
