refactor: rename some classes and change some tags

--- a/singolo2.html
+++ b/singolo2.html
@@ -10,8 +10,8 @@
 	<div class="wrapper">
 		<main>
 			<section class="portfolio">
-        <h2 class="portfolio__headline">Portfolio</h2>
-				<p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <h2 class="section-headline">Portfolio</h2>
+				<p class="section-description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
 				<ul class="tags">
 					<li class="tags__item tags__item_active">All</li>
 					<li class="tags__item">Web Design</li>
@@ -30,45 +30,45 @@
 					<li class="portfolio__pic"><img src="asserts/img/portfolio_9.png" width="220" height="187"></li>
 					<li class="portfolio__pic"><img src="asserts/img/portfolio_10.png" width="220" height="187"></li>
 					<li class="portfolio__pic"><img src="asserts/img/portfolio_11.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_12.png" width="220" height="187"></li>
+          <li class="portfolio__pic"><img src="asserts/img/portfolio_12.png" width="220" height="187"></li>
 				</ul>
 			</section>
 			<section class="about-us">
-				<h2 class="about-us__headline">About Us</h2>
-				<p class="about-us__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+				<h2 class="section-headline">About Us</h2>
+				<p class="section-description about-us__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				<ul class="layout-3-col">
 					<li class="about-us__item">
 						<img class="person" src="asserts/img/person_1.png" width="301" height="300">
-						<h4 class="description__header">Adam Jensen</h4>
-						<p class="description__text">Quisque luctus, quam eget molestie commodo, lacuspuru cursus purus, nec rutrum tellus dolor id lorem.</p>
-						<ul class="social-medias">
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-						</ul>
+						<h4 class="item-headline">Adam Jensen</h4>
+						<p class="item-description">Quisque luctus, quam eget molestie commodo, lacus puru cursus purus, nec rutrum tellus dolor id lorem.</p>
+						<div class="social-medias">
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+						</div>
 					</li>
 					<li class="about-us__item">
 						<img class="person" src="asserts/img/person_2.png" width="300" height="300">
-						<h4 class="description__header">Desmond Miles</h4>
-						<p class="description__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, uItrices velit.</p>
-						<ul class="social-medias">
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-						</ul>
+						<h4 class="item-headline">Desmond Miles</h4>
+						<p class="item-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, uItrices velit.</p>
+						<div class="social-medias">
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+						</div>
 					</li>
 					<li class="about-us__item">
 						<img class="person" src="asserts/img/person_3.png" width="300" height="300">
-						<h4 class="description__header">Scolara Visari</h4>
-						<p class="description__text">Nulla sed nunc et tortor luctus fauabus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
-						<ul class="social-medias">
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-							<li class="icon icon_small"></li>
-						</ul>
+						<h4 class="item-headline">Scolara Visari</h4>
+						<p class="item-description">Nulla sed nunc et tortor luctus fauabus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+						<div class="social-medias">
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+							<a class="icon icon_small"></a>
+						</div>
 					</li>
 				</ul>
 			</section>
