feat: implement solution for portfolio block

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 				<a class="icon icon_small"></a>
 			</div>
 		</footer>
-	</div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
