feat: implement solution for header

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<a class="logo" href="#"><span class="logo__text">Singolo</span><span class="logo__star">*</span></a>
+			<a class="logo" href="#home"><span class="logo__text">Singolo</span><span class="logo__star">*</span></a>
 			<nav class="header__navigation">
 				<ul class="navigation">
-					<li class="navigation__item navigation__item_current"><a class="navigation__link" href="#">Home</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Services</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Portfolio</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">About</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Contact</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="#home">Home</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="#services">Services</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="#portfolio">Portfolio</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="#about">About</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -28,7 +28,7 @@
 				<div class="slider__item slider__item_turned"><img src="asserts/img/base.png" width="215" height="458" alt="mobile phone"></div>
 				<button class="slider__button slider__button_next"></button>
 			</section>
-			<section class="services">
+			<section class="services" id="services">
 				<h2 class="section-headline">Our Services</h2>
 				<p class="section-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				<ul class="layout-3-col servises__items">
@@ -76,7 +76,7 @@
 					</li>
 				</ul>
       </section>
-      <section class="portfolio">
+      <section class="portfolio" id="portfolio">
         <h2 class="section-headline">Portfolio</h2>
 				<p class="section-description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
 				<ul class="tags">
@@ -100,7 +100,7 @@
           <li class="portfolio__pic"><img src="asserts/img/portfolio_12.png" width="220" height="187"></li>
 				</ul>
 			</section>
-			<section class="about-us">
+			<section class="about-us" id="about">
 				<h2 class="section-headline">About Us</h2>
 				<p class="section-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				<ul class="layout-3-col about-us__items">
@@ -145,7 +145,7 @@
 					</li>
 				</ul>
       </section>
-      <section class="contact-us">
+      <section class="contact-us" id="contact">
 				<h2 class="section-headline">Get a Quote</h2>
 				<p class="section-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 				<div class="layout-2-col">
