feat: implement solution for "Get a quote"-block

--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
 			</div>
 		</footer>
   </div>
+  <template id="template">
+    <div class="overlay">
+      <div class="modal-window">
+        <h4 class="modal-window__header">Letter is sent!</h4>
+        <p class="modal-window__subject">No subject</p>
+        <p><pre class="modal-window__comments">No description</pre></p>
+        <button class="modal-window__button">Ok</button>
+      </div>
+    </div>
+  </template>
   <script src="script.js"></script>
 </body>
 </html>
