fix: correct some minor flaws

--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
 					<li class="tags__item">Artwork</li>
 				</ul>
 				<ul class="layout-4-col">
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_1.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_2.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_3.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_4.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_5.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_6.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_7.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_8.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_9.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_10.png" width="220" height="187"></li>
-					<li class="portfolio__pic"><img src="asserts/img/portfolio_11.png" width="220" height="187"></li>
-          <li class="portfolio__pic"><img src="asserts/img/portfolio_12.png" width="220" height="187"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_1.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_2.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_3.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_4.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_5.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_6.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_7.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_8.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_9.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_10.png" width="220" height="187" alt="portfolio picture"></li>
+					<li class="portfolio__pic"><img src="asserts/img/portfolio_11.png" width="220" height="187" alt="portfolio picture"></li>
+          <li class="portfolio__pic"><img src="asserts/img/portfolio_12.png" width="220" height="187" alt="portfolio picture"></li>
 				</ul>
 			</section>
 			<section class="about-us" id="about">
@@ -120,10 +120,10 @@
 						  <p class="item-description__text">Quisque luctus, quam eget molestie commodo, lacus puru cursus purus, nec rutrum tellus dolor id lorem.</p>
             </div>
             <div class="social-medias">
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
 						</div>
 					</li>
 					<li class="about-us__item">
@@ -133,10 +133,10 @@
 						  <p class="item-description__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, uItrices velit.</p>
             </div>
             <div class="social-medias">
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
 						</div>
 					</li>
 					<li class="about-us__item">
@@ -146,10 +146,10 @@
               <p class="item-description__text">Nulla sed nunc et tortor luctus fauabus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
             </div>
 						<div class="social-medias">
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
-							<a class="icon icon_small"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
+							<a class="icon icon_small" href="#"></a>
 						</div>
 					</li>
 				</ul>
@@ -162,7 +162,7 @@
 		        <input class="contact-form__field" type="text" name="name" placeholder="Name (Required)" pattern="^[A-Z]{1}[a-z]{2,19}$" required>
 		        <input class="contact-form__field" type="email" name="email" placeholder="Email (Required)" required>
 		        <input class="contact-form__field" type="text" name="subject" placeholder="Subject">
-		        <textarea class="contact-form__area"name="comments" placeholder="Describe your project in detail..."></textarea>
+		        <textarea class="contact-form__area" name="comments" placeholder="Describe your project in detail..."></textarea>
 		        <button class="contact-form__button" name="submit">Get Info</button>
 					</form>
 					<div class="contacts">
@@ -182,10 +182,10 @@
     <footer class="footer">
 			<span class="copyright">&copy; Copyright 2013</span>
 			<div class="social-medias">
-				<a class="icon icon_small"></a>
-				<a class="icon icon_small"></a>
-				<a class="icon icon_small"></a>
-				<a class="icon icon_small"></a>
+				<a class="icon icon_small" href="#"></a>
+				<a class="icon icon_small" href="#"></a>
+				<a class="icon icon_small" href="#"></a>
+				<a class="icon icon_small" href="#"></a>
 			</div>
 		</footer>
   </div>
