fix: change validation for form field: "Name"

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<p class="section-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 					<div class="layout-2-col">
 						<form class="contact-form" action="#" method="post">
-			        <input class="contact-form__field" type="text" name="name" placeholder="Name (Required)" pattern="^[A-Z]{1}[a-z]{2,19}$" required>
+			        <input class="contact-form__field" type="text" name="name" placeholder="Name (Required)" pattern="[A-Za-z .]{2,20}" required>
 			        <input class="contact-form__field" type="email" name="email" placeholder="Email (Required)" required>
 			        <input class="contact-form__field" type="text" name="subject" placeholder="Subject">
 			        <textarea class="contact-form__area" name="comments" placeholder="Describe your project in detail..."></textarea>
