fix: make 1st menu item active by default

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<a class="logo" href="#slider"><span class="logo__text">Singolo</span><span class="logo__star">*</span></a>
 				<nav class="header__navigation">
 					<ul class="navigation">
-						<li class="navigation__item"><a class="navigation__link" href="#slider">Home</a></li>
+						<li class="navigation__item navigation__item_current"><a class="navigation__link" href="#slider">Home</a></li>
 						<li class="navigation__item"><a class="navigation__link" href="#services">Services</a></li>
 						<li class="navigation__item"><a class="navigation__link" href="#portfolio">Portfolio</a></li>
 						<li class="navigation__item"><a class="navigation__link" href="#about">About</a></li>
